--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "blade-ui-kit/blade-heroicons": "^2.6",
+        "codeat3/blade-element-plus-icons": "^1.1",
         "codeat3/blade-ikonate": "^1.6",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
