--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "blade-ui-kit/blade-heroicons": "^2.6",
         "codeat3/blade-element-plus-icons": "^1.1",
         "codeat3/blade-ikonate": "^1.6",
+        "codeat3/blade-phosphor-icons": "^2.3",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "postare/blade-mdi": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.6",
